FIX: Fix Galerie Background Covering.

--- a/src/css/galerie.css
+++ b/src/css/galerie.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background: url(../assets/charles_cantin_background_darkened.jpg) no-repeat center center fixed;
   background-size: cover;
-  min-height: 100%;
+  height: auto;
   overflow: auto;
   justify-content: space-between;
   align-items: center;
